// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Failure Strategy/> tests renders ok with data 1`] = `
<div>
  <div
    class="bp3-dialog-body"
  >
    <div
      class="main"
      data-testid="failure-strategy-panel"
    >
      <span
        class="helpText"
      >
        pipeline.failureStrategies.helpText
      </span>
      <div
        class="header"
      >
        <div
          class="tabs"
        >
          <ul
            class="stepList"
          >
            <li
              class="stepListItem"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main stepListBtn StyledProps--intent-primary"
                data-selected="true"
                data-testid="failure-strategy-step-0"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
            </li>
          </ul>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
            data-testid="add-failure-strategy"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              <span>
                add
              </span>
            </span>
          </button>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main"
          data-testid="remove-failure-strategy"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-trash StyledProps--main"
            icon="trash"
          >
            <svg
              data-icon="trash"
              height="12"
              viewBox="0 0 16 16"
              width="12"
            >
              <desc>
                trash
              </desc>
              <path
                d="M14.49 3.99h-13c-.28 0-.5.22-.5.5s.22.5.5.5h.5v10c0 .55.45 1 1 1h10c.55 0 1-.45 1-1v-10h.5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm-8.5 9c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm3 0c0 .55-.45 1-1 1s-1-.45-1-1v-6c0-.55.45-1 1-1s1 .45 1 1v6zm2-12h-4c0-.55-.45-1-1-1h-2c-.55 0-1 .45-1 1h-4c-.55 0-1 .45-1 1v1h14v-1c0-.55-.45-1-1-1z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="failureStrategies[0].onFailure.errors"
        >
          pipeline.failureStrategies.onFailureOfType
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-popover-wrapper errorSelect bp3-fill"
          >
            <div
              class="bp3-popover-target"
            >
              <div
                class=""
              >
                <div
                  class="bp3-input bp3-tag-input bp3-fill bp3-multi-select"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        pipeline.failureStrategies.errorTypeLabels.AnyOther
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost bp3-multi-select-tag-input-input"
                      name="failureStrategies[0].onFailure.errors"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="failureStrategies[0].onFailure.action"
        >
          pipeline.failureStrategies.performAction
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="step"
          >
            <label
              class="strategyIcon"
            >
              <div
                class="icon"
              >
                <div
                  class="checkMark"
                />
                <span
                  class="bp3-icon bp3-icon-delete StyledProps--main"
                  icon="delete"
                >
                  <svg
                    data-icon="delete"
                    height="22"
                    viewBox="0 0 20 20"
                    width="22"
                  >
                    <desc>
                      delete
                    </desc>
                    <path
                      d="M15 6a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10l3.29-3.29c.19-.18.3-.43.3-.71zm-5-6C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="iconText"
              >
                pipeline.failureStrategies.strategiesLabel.Ignore
              </span>
              <input
                checked=""
                data-testid="failure-strategy-ignore"
                name=""
                type="checkbox"
                value="Ignore"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Failure Strategy/> tests renders ok with no data 1`] = `
<div>
  <div
    class="bp3-dialog-body"
  >
    <div
      class="main"
      data-testid="failure-strategy-panel"
    >
      <span
        class="helpText"
      >
        pipeline.failureStrategies.helpText
      </span>
      <div
        class="header"
      >
        <div
          class="tabs"
        >
          <ul
            class="stepList"
          >
            <li
              class="stepListItem"
            >
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main stepListBtn StyledProps--intent-primary"
                data-selected="true"
                data-testid="failure-strategy-step-0"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  1
                </span>
              </button>
            </li>
          </ul>
          <button
            class="bp3-button bp3-minimal bp3-small StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary"
            data-testid="add-failure-strategy"
            type="button"
          >
            <span
              class="bp3-icon bp3-icon-plus StyledProps--main"
              icon="plus"
            >
              <svg
                data-icon="plus"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  plus
                </desc>
                <path
                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              class="bp3-button-text"
            >
              <span>
                add
              </span>
            </span>
          </button>
        </div>
      </div>
      <div
        class="defaultStageText"
      >
        pipeline.failureStrategies.defaultStageText
      </div>
      <div
        class="bp3-form-group"
      >
        <label
          class="bp3-label"
          for="failureStrategies[0].onFailure.action"
        >
          pipeline.failureStrategies.performAction
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="step"
          >
            <label
              class="strategyIcon"
            >
              <div
                class="icon"
              >
                <div
                  class="checkMark"
                />
                <span
                  class="bp3-icon bp3-icon-repeat StyledProps--main"
                  icon="repeat"
                >
                  <svg
                    data-icon="repeat"
                    height="22"
                    viewBox="0 0 20 20"
                    width="22"
                  >
                    <desc>
                      repeat
                    </desc>
                    <path
                      d="M14 6c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1v2.05C16.18 1.6 13.29 0 10 0 4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10c0-.55-.45-1-1-1s-1 .45-1 1c0 4.42-3.58 8-8 8s-8-3.58-8-8 3.58-8 8-8c2.53 0 4.77 1.17 6.24 3H15c-.55 0-1 .45-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <span
                class="iconText"
              >
                pipeline.failureStrategies.strategiesLabel.StageRollback
              </span>
              <input
                checked=""
                data-testid="failure-strategy-stagerollback"
                name=""
                type="checkbox"
                value="StageRollback"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
